bundle updated; 'Clear all errors' button added to billing page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -398,8 +398,9 @@ footer {
 }
 
 .bottom_buttons {
-  padding-top: 20px;
-  margin-left: 20px;
+//  padding-top: 20px;
+//  margin-left: 20px;
+  padding: 20px;
 }
 
 .bottom_nav {
