--- a/app/views/layouts/_ref.html.erb
+++ b/app/views/layouts/_ref.html.erb
@@ -11,5 +11,6 @@
       <li> <%= link_to "Vaccines", vaccines_path, method: :get %> </li>
       <li><%= link_to "Doctors", doctors_path %> </li>
       <li><%= link_to "Schedules", schedules_path %> </li>
+      <li><%= link_to "Health Card Validator", card_validator_path %> </li>
     </ul>
 </li>
