--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -4,10 +4,10 @@
 <div class="row">  
   <div class="col-md-5 col-sm-12">
     <img src='/images/clinic22.jpg'width="580" style="margin-left: 20px "</img>
-    <div id="address" class="pt-3 ml-5">140 Centennial Parkway North, Hamilton, ON L8E 1H9 <br>Phone: (905) 561-9255 fax: (905) 561-4391 </div>
+    <div id="address" class="pt-3 ml-5">140 Centennial Parkway North, Hamilton, ON L8E 1H9 <p>Phone: (905) 561-9255 fax: (905) 561-4391 </div>
 
   <div class="row pt-3">
-  <div class="card text-center col-md-5 col-md-offset-2 bg-danger">
+  <div class="card text-center col-md-5 col-md-offset-3 bg-danger">
   <div class="card-body">
   <%= Schedule.doc_on_duty %>
   </div>
