minor styling changes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,9 +58,9 @@ p {
 }
 
 .container-fluid {
-//   overflow-x: auto;
-   padding-left: 0;
-   padding-right: 0;
+   overflow-x: auto;
+//   padding-left: 0px;
+//   padding-right: 5px;
 }
 
 .help-container {
