--- a/app/views/layouts/_desktop_admin_navigation.html.erb
+++ b/app/views/layouts/_desktop_admin_navigation.html.erb
@@ -17,6 +17,6 @@
   <%= render 'layouts/ref' %>
   <%= render 'layouts/forms' %>
   <%= render 'layouts/admin' %>
-  <li class="unstyled" style="width:15px"></li>
+  <li  style="width:15px"></li>
   </ul>
 </nav>
