--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -53,7 +53,7 @@
   <%= render "#{device_type}_lookup" if hcv.up %>
 </div>
 <p class="pt-3"> Registered already? Go ahead and book your visit. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications. Doctor will advise if you need to come to the clinic. </p>
-<div align="center" class="pt-4"><%= link_to 'BOOK A VISIT', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Book a visit', new_user_session_path, class: "btn btn-warning btn-md" %></div>
 <% end %>
 
 <div class="pt-4">
