google business rating link on patient page

--- a/app/views/patients/_patient_desktop_visits.html.erb
+++ b/app/views/patients/_patient_desktop_visits.html.erb
@@ -28,5 +28,7 @@
 	<div class="row" style="float: right">
 	<%= will_paginate @visits %>
         </div>
+
+        <%= render "google_biz_link" %>
     <% end %>
   </div>
