--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -3,7 +3,7 @@
 <% show_popup = params[:show_popup] rescue false %>
 <div class="row">  
   <div class="col-md-5 col-sm-12">
-    <img src='/images/clinic22.jpg'width="580" style="margin-left: 20px "</img>
+    <img src='/images/clinic22.jpg' width="580" style="margin-left: 20px "></img>
     <div id="address" class="pt-3 ml-5">140 Centennial Parkway North, Hamilton, ON L8E 1H9 <p>Phone: (905) 561-9255 fax: (905) 561-4391 </div>
 
   <div class="row pt-3">
