--- a/app/views/patients/_patient_mobile_visits.html.erb
+++ b/app/views/patients/_patient_mobile_visits.html.erb
@@ -27,5 +27,7 @@
 	<div class="row" style="float: right">
 	<%= will_paginate @visits %>
         </div>
+        
+        <%= render "google_biz_link" %>
     <% end %>
   </div>
