--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,8 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-Please contact <a href="mailto:eosta@me.com?subject=WALKIN_Inquiry&cc=ostadim1@gmail.com">Site admin</a> if you have any questions or concerns about this website
+Please contact <a href="mailto:dosta@me.com?subject=Walk-In Inquiry&cc=ostadim1@gmail.com">Site admin</a> if you have any questions or concerns about this website.
+</p>
+<p>
+WalkinEMR system was developed by Dmitri Ostapenko and is currently offered for lease. If interested, please <a href="mailto:dosta@me.com?subject=EMR_Enquiry&cc=ostadim1@gmail.com">Contact me directly</a> for further info and/or  to arrange demo of full capabilities. This affordable system is tailored for fast-paced walk-in clinic or small practice and is very easy to use. 
 </p>
