--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -15,8 +15,8 @@
   </div>
 
     <div class="p-3">
-      You can set up your vistual visit or request prescription renewal even when the clinic is closed : <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
-      <a href="mailto:dosta@me.com?subject=Patient Inquiry">send an email</a> or use chat button bottom right.
+      You can set up your virtual visit or request prescription renewal even when the clinic is closed : <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
+      <a href="mailto:eosta@me.com?subject=Patient Inquiry">send an email</a> or use chat button bottom right.
     </div>
 
     <p>
