--- a/app/views/visits/_patient_desktop_visit.html.erb
+++ b/app/views/visits/_patient_desktop_visit.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= link_to visit.date, patient_visit_path(@patient,visit) %></td>
   <td><%= visit.doctor.lname %>
-  <td><%= visit.diag_code %></td>
+  <td><%= visit.diag_descr %></td>
   <td><%= visit.all_pcodes.join(',') %></td>
   <td><%= visit.meds_renewed_str %></td>
   <td class="text-center">
@@ -15,7 +15,7 @@
     <% if visit.status == CANCELLED %>
     Cancelled
   <% elsif visit.date.today? && visit.arrived? %>
-    <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(@patient, visit), data: { confirm: "Are you sure you want to cancel your appointment?" } %>
+    <%= link_to '<i class="glyphicon glyphicon-remove-sign"></i>'.html_safe, cancel_patient_visit_path(@patient, visit), data: { confirm: "Are you sure you want to cancel your appointment? Once cancelled, you won't be able to book another appointment today." } %>
   <% end %>
   </td>
 </tr>
