--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,7 +100,7 @@ overflow: auto;
 
 /* navbar */
 
-#topbar {
+#topbar2 {
     background: #3fbbc0;
     color: #fff;
     height: 40px;
@@ -111,12 +111,12 @@ overflow: auto;
     transition: all 0.5s;
 }
 
+.navbar-nav > li > a:hover, 
 .navbar .navbar-nav > .active > a,
 .navbar .navbar-nav > .active > a:hover,
 .navbar .navbar-nav > .active > a:focus {
     color: red;
-//    font-weight: bold;
-//    background-color: white;
+    background-color: white !important;
 }
 
 .nav-item {
@@ -133,8 +133,6 @@ overflow: auto;
   z-index: 1000;
   margin-top: 0;
   margin: 0 auto;
-//  display: table;
-//  table-layout: fixed;
 }
 
 .navbar-nav > li > a {
@@ -313,7 +311,7 @@ td.hlight {
   }
 }
 
-#dropdown-menu {
+#dropdown-menu2 {
   padding-left: 20px;
   color: gray;
   &:hover {
@@ -1005,9 +1003,9 @@ card > hr {
 }
 
 .glyphicon.glyphicon-menu-hamburger {
-    font-size: 20px;
+    font-size: 16px;
   &:hover {
-    color: white;
+    color: red;
     text-decoration: none;
     }
 }
