--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -22,7 +22,7 @@ html,body {
   font: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding-bottom: 40px;
 
-  font-size: 0.98em;
+  font-size: 0.92em;
 //  font-size: 0.9em;
 }
 
@@ -89,7 +89,7 @@ overflow: auto;
 }
 
 #body {
-   padding-top: 2em;
+//   padding-top: 2em;
    clear: both;
 }
 
@@ -116,7 +116,7 @@ overflow: auto;
 .navbar .navbar-nav > .active > a:hover,
 .navbar .navbar-nav > .active > a:focus {
     color: red;
-    background-color: white !important;
+    background-color: white; // !important;
 }
 
 .nav-item {
@@ -1053,6 +1053,10 @@ card > hr {
    background-color: #E9F0FD!important;
 //  background-color: yellow; 
 }
+
+//.form-control-label, .form-check-label {
+//  font-size: 14px !important;
+//}
 
 .form-inline {
   display: inline-block;
