--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,12 +17,12 @@ $spacer: 1rem !default;
 
 html,body {
   height: 100%;
-  padding-top: 0; 
+  padding-top: 0;
   overflow-y: scroll;
   font: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding-bottom: 40px;
 
-  font-size: 0.92em;
+  font-size: 0.95em;
 //  font-size: 0.9em;
 }
 
@@ -89,7 +89,7 @@ overflow: auto;
 }
 
 #body {
-//   padding-top: 2em;
+   padding-top: 2em;
    clear: both;
 }
 
