login page updated

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -807,6 +807,10 @@ table.pretty {
     overflow-y: scroll;
 }
 
+#patient_ohip_num {
+   font-size: 16px;
+}
+
 .visit-notes-panel-body {
     background: #FAFAD2;
     max-height: 200px;
