--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -4,21 +4,18 @@
 <%= simple_form_for :patient, url: patients_lookup_path do |f| %>
   <%= f.error_notification %>
 
-<small>
 <div class="card bg-success mb-3">
   
 <div class="card-body">
-  <img src="/images/on_32_tr.png" width=32><b> Your Health Card#</b>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-5">
+  <h4><img src="/images/on_32_tr.png" width=36> Your Health Card#</h4>
   <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-    <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA'  %>
-  </div>
+    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span> 
+    <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA', class: "form-control"  %>
   </div>
 
-  <div class="col-md-2 pt-1">
-  <div style="width:100px; display:none; float:left" id="register_button">
+  <div style="width:100px; display:none; float:left; margin-top:20px;" id="register_button">
   <%= button_to 'Register', patients_lookup_path, class:"btn btn-primary", method: 'get' %>
   </div>
   <div style="width:100px; display:none" id="login_button">
@@ -26,22 +23,24 @@
   </div>
   </div>
 
+  <!--
   <div class="col-md-3 pt-3 ml-3">
     <div class="text-muted" id="explanation">
       <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
       If you visited our clinic before, we will look up your record. After registration you will be able to log in to your patient profile and book a visit.
     </div>
   </div>
+  -->
 
-  <div class="col-md-2 pt-3">
-    <img src="/images/card.jpg" width=95>
+  <div class="col-md-2" style='margin-bottom: 20px; margin-top: 15px;'>
+    <img src="/images/card.jpg" width=200> 
   </div>
   
 </div>
 
 <span class="text-success" id="results"></span>
 
-<div style="float:right; margin-right: 5px;" >
+<div style="float:right; margin-right: 10px;" >
   <img src="/images/on_logo1_tr.png" width='90px' >
 </div>
 
