--- a/app/views/visits/_staff_form.html.erb
+++ b/app/views/visits/_staff_form.html.erb
@@ -100,7 +100,7 @@
 
 <div class="row">
   <div class="col-sm-2" id="visit_statuses">
-  <%= f.input :status, collection: VISIT_STATUSES, include_blank: false,  placeholder: 'Status', disabled: disabled %>
+  <%= f.input :status, collection: VISIT_STATUSES, include_blank: false,  placeholder: 'Status' %> <%#, disabled: disabled %>
   </div>
 
   <div class="col-sm-2">
