changes to front page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -351,9 +351,9 @@ td.hlight {
 }
 
 #address {
-//  font-size: 1.1em;
+  font-size: 0.9em;
 //  font-weight: bold;
-//  margin-left: 15px;  
+  margin-left: 15px;  
 }
 
 .hdr-text {
