--- a/app/views/schedules/_full_schedule.html.erb
+++ b/app/views/schedules/_full_schedule.html.erb
@@ -1,6 +1,6 @@
 <% @schedules = Schedule.all %>
 <table class="table table-hover table-condensed table-striped" >
-<caption><h4>Current Schedule</h4></caption>
+<caption><h4>Current Schedule - updated daily</h4></caption>
   <tbody>
     <% @schedules.each do |schedule| %>
       <tr>
