--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -14,17 +14,17 @@
   </div>
   </div>
 
-    <div class="p-3">
-      You can set up your virtual visit or request prescription renewal even when the clinic is closed : <%= link_to "request callback from doctor", new_user_session_path %>. In case of any registration problems, please
-      <a href="mailto:eosta@me.com?subject=Patient Inquiry">send an email</a> or use chat button bottom right.
+    <div class="pt-3">
+      You can set up your virtual visit or request prescription renewal even when the clinic is closed : <%= link_to "request callback from doctor", new_user_session_path %>.
+    </div>
+    <div class="pt-3">
+       For telemedicine visits, our goal is to call you back within an hour of your online request, provided it was made between 8am and 8pm Monday to Friday, or between 9am and 2pm on weekends.
     </div>
 
     <p>
     <div class="ml-3" >
     <div class="panel panel-info news-panel-body">
       <div class="panel-body "><p align="justify"> 
-       This is current schedule updated daily. Please <%= link_to "book your appointment online", new_user_session_path %> or call the clinic  during business hours: <b> (905) 561-9255 </b>.
-       For telemedicine visits, our goal is to call you back within an hour of your online request, provided it was made between 8am and 8pm Monday to Friday, or between 9am and 2pm on weekends.
   <%= render "schedules/full_schedule" %>
         </p>
     </div>
@@ -34,37 +34,43 @@
 
 <div class="col-md-6 col-md-offset-1">
   <div class="hdr-text">We are open every Day! </div> 
-<font size=3>
+<font size=2>
   <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
   <div class='pt-5'></div>
 
-   <p><font size=7>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register here and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. You can also go directly to the clinic, but registering saves time. </p>
+   <p><font size=6>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register here and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. You can also go directly to the clinic, but registering saves time. </p>
   <div class="pt-3"></div>
-  <p> <font size=7>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please enter your OHIP number to register, or click button below to log into your patient profile and book a visit. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
+
+  <p> <font size=6>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please enter your OHIP number to register, or click button below to log into your patient profile and book a visit. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
+
+  <div class="pt-3"></div>
+  <p> <font size=6>E</font>ven if you are out of province or don't have a health card, we still can help. Please call the clinic directly during business hours or just walk in. </p>
 
 <% if current_patient && current_patient.user && current_patient.user.confirmed_at %>
   <h2> Welcome back, <%= current_patient.fname %> </h2>
   <%= render "/devise/sessions/new" %>
 <% else %>
 <div class="pt-2">
-  <font size=7>N</font>ew patient? Please enter your health card number to register:
+  <font size=6>N</font>ew patient? <%= link_to 'Please enter your health card number to register', new_user_registration_path %>
 </div>
 <div class="pt-2">
   <%= render "#{device_type}_lookup" if hcv.up %>
 </div>
-<p class="pt-3"> Registered already? Go ahead and book your visit. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications. Doctor will advise if you need to come to the clinic. </p>
+
+<p class="pt-3">Registered already? Go ahead and book your visit. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications. Doctor will advise if you need to come to the clinic. </p>
 <div align="center" class="pt-4"><%= link_to 'Book a visit', new_user_session_path, class: "btn btn-warning btn-md" %></div>
 <% end %>
 
 <div class="pt-4">
   <i>
-    Patients who booked their appointments online for visits at the clinic, as well as patients with small children,  <u>will be given priority</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+    Patients who booked their appointments online, as well as patients with small children,  <u>will be given priority</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
   </i>
 </div>
 
+<!--
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
-
 <div class="pt-5"> All visiting patients are required to wear a mask </div>
+-->
 
 <div class="p-5 pull-right">
 <img src="/images/clinic.jpg">
@@ -74,15 +80,17 @@
 </div>
 <div class="row ml-3 mr-3">
 <div class="col-md-12">
-<p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
 
+<!--
 <p>
 Covid-19 is still here. This virus is dangerous mostly for older people with serious health conditions. 
 If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not come to the clinic.  Please stay at home and register for a telemedicine appointment with one of our doctors using the button above.
 </p>
 
+
 <p>
 <b>Think you might have Covid?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
+-->
 
 </font>
 </div>
