--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -16,9 +16,11 @@
   </div>
   </div>
 
+  <!--
     <div class="pt-3">
       You can set up your virtual visit or request prescription renewal even when the clinic is closed : <%= link_to "request callback from doctor", new_user_session_path %>.
     </div>
+  -->
 
     <p>
     <div class="ml-3" >
@@ -37,6 +39,12 @@
   <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
   <div class='pt-5'></div>
 
+  <p><b> From December 1 we will not provide telemedicine services. Due to new government regulations all patient visits must be done in person.
+  For all patients who have flu like symptoms we require negative COVID test done prior to the clinic visit. Facial mask is required at all times during clinic visit.
+  </b></p>
+  
+<!--
+  <div class='pt-5'></div>
    <p><font size=6>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register here and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. You can also go directly to the clinic, but registering saves time. </p>
   <div class="pt-3"></div>
 
@@ -70,10 +78,8 @@
   </i>
 </div>
 
-<!--
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
 <div class="pt-5"> All visiting patients are required to wear a mask </div>
--->
 
 <div class="p-5 pull-right">
 <img src="/images/clinic.jpg">
@@ -84,7 +90,6 @@
 <div class="row ml-3 mr-3">
 <div class="col-md-12">
 
-<!--
 <p>
 Covid-19 is still here. This virus is dangerous mostly for older people with serious health conditions. 
 If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not come to the clinic.  Please stay at home and register for a telemedicine appointment with one of our doctors using the button above.
