--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title><%= full_title(yield(:title)) %></title>
     <%= render 'layouts/metatags' %>
+    <%= render 'layouts/ads' %>
     <%= render 'layouts/rails_default' %>  
     <%= render "shared/modal" if device_is_desktop? %>
     <link rel="icon"  href="/favicon.ico" sizes="16x16" />
