--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -5,7 +5,9 @@
   <div class="col-md-5 col-sm-12">
     <img src='/images/clinic22.jpg' width="580" style="margin-left: 20px "></img>
     <div id="address" class="pt-3 ml-5">140 Centennial Parkway North, Hamilton, ON L8E 1H9  -  <%= link_to 'see directions',
-    "https://www.google.com/maps/dir//Stoney+Creek+Medical+Walk-In+Clinic,+140+Centennial+Pkwy+N,+Stoney+Creek,+ON+L8E+1H9,+Canada/@43.233076,-79.7631224,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x882c9894d9c1cac5:0xeb749383c5b18494!2m2!1d-79.7609284!2d43.233076!3e0", target: "_blank" %> <p>Phone: (905) 561-9255 fax: (905) 561-4391 </div>
+      "https://www.google.com/maps/dir//Stoney+Creek+Medical+Walk-In+Clinic,+140+Centennial+Pkwy+N,+Stoney+Creek,+ON+L8E+1H9,+Canada/@43.233076,-79.7631224,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x882c9894d9c1cac5:0xeb749383c5b18494!2m2!1d-79.7609284!2d43.233076!3e0", target: "_blank" %>
+    
+    </div>
 
   <% bg = Schedule.clinic_open? ? 'bg-success' : 'bg-danger' %>
   <div class="row pt-3">
@@ -39,11 +41,6 @@
   <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
   <div class='pt-5'></div>
 
-  <p><b> From December 1 we will not provide telemedicine services. Due to new government regulations all patient visits must be done in person.
-  For all patients who have flu like symptoms we require negative COVID test done prior to the clinic visit. Facial mask is required at all times during clinic visit.
-  </b></p>
-  
-<!--
   <div class='pt-5'></div>
    <p><font size=6>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register here and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. You can also go directly to the clinic, but registering saves time. </p>
   <div class="pt-3"></div>
@@ -85,22 +82,6 @@
 <img src="/images/clinic.jpg">
 </div>
 
-</div>
-</div>
-<div class="row ml-3 mr-3">
-<div class="col-md-12">
-
-<p>
-Covid-19 is still here. This virus is dangerous mostly for older people with serious health conditions. 
-If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not come to the clinic.  Please stay at home and register for a telemedicine appointment with one of our doctors using the button above.
-</p>
-
-
-<p>
-<b>Think you might have Covid?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
--->
-
-</font>
 </div>
 </div>
 
