--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -66,7 +66,7 @@
 <li> Card fields are now compared with our records. Warning message and edit form are shown if mismatch is found</li>
 </ul>
 
-	Please email <a href="mailto:dosta@me.com?subject=EMR staff Inquiry&cc=ostadim1@gmail.com">Dimitri</a> if you have any questions or concerns about this website. 
+	Please email <a href="mailto:eosta@me.com?subject=EMR staff Inquiry&cc=ostadim1@gmail.com">Dr. Elena Ostapenko</a> if you have any questions or concerns about this website. 
 	If there's a problem, please provide screenshot, short description of the problem and health card string swiped right into email message body.
 	 
 	Thank you!
