--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
   <ul class="nav navbar-nav">
     <li class="nav-item"> <%= link_to "#{img} Stoney Creek Medical Walk-In Clinic".html_safe, root_path, id: "logo" %></li>
     <li class="nav-item" style="padding-left: 20em"><i class="glyphicon glyphicon-time"></i> Mon - Fri, 9am to 7:30pm; Sat,Sun: 9am to 1:30pm
-     &nbsp; <i class="glyphicon glyphicon-phone"></i> 905-561-9255
+     &nbsp; <i class="glyphicon glyphicon-phone"></i> 
     </li>
   </ul>
   <!--
