Revert "other clinics link"
This reverts commit c6f0f6b079a949b59a4a153a75f81ec1f3d00772.

--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -40,7 +40,7 @@
   </div>
 </font>
 
-<div class="pt-3"> <%= link_to 'Other clinics in Stoney Creek', other_clinics_path %> </div>
+<h2>Off hours: <%= link_to 'Request Callback', new_user_session_path %> </h2>
 
 <div class='pt-5'>
 <div class='pt-5'>
