--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -14,6 +14,8 @@
   <div class="card text-center col-md-5 col-md-offset-3 <%= bg %>">
   <div class="card-body">
   <%= Schedule.doc_on_duty %>
+  
+  <%= link_to 'or check other walk-in clinics in Stoney Creek', other_clinics_path %>
   </div>
   </div>
   </div>
@@ -29,7 +31,7 @@
     <div class="panel panel-info news-panel-body">
       <div class="panel-body "><p align="justify"> 
   <%= render "schedules/full_schedule" %>
-        </p>
+
     </div>
   </div>
   </div>
@@ -75,10 +77,9 @@
   </i>
 </div>
 
-<div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
-<div class="pt-5"> All visiting patients are required to wear a mask </div>
+<div class="pt-3"><h3><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></h3> </div>
+<div class="pt-2"><h3><%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %><h3> </div>
 
-<div class="pt-3"><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %> 
 <div class="p-5 pull-right">
 <img src="/images/clinic.jpg">
 </div>
