--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -40,7 +40,8 @@
   </div>
 </font>
 
-<div class="pt-3"><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %> 
+<div class="pt-3"><h3><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></h3> </div>
+<div class="pt-2"><h3><%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %><h3> </div>
 
 <div class='pt-5'>
 <div class='pt-5'>
