--- a/app/views/static_pages/other_doctors.html.erb
+++ b/app/views/static_pages/other_doctors.html.erb
@@ -1,27 +1,35 @@
-<h3>Family doctors accepting new patients in Hamilton </h3>
-<pre>
-  <b>Hamilton</b>
+<div class="card bg-primary col-md-8 col-md-offset-2 " >
+  <div class="card-body">
+    <h4>Family doctors accepting new patients in Hamilton </h4>
+    <pre>
 
+    <hr>    
   Dr. Ayman Soliman
   City: Hamilton
   Phone: (905)574-3000
   Address: 1394 Upper Gage Ave. Unit #7 
   Gender: M
-  Notes: Family Physician accepting new patients, walk-ins, and planned appointments accepted. Dr. Soliman is Fluent in English and Arabic.
+  Notes: Family Physician accepting new patients, walk-ins, and planned appointments accepted. 
+         Dr. Soliman is Fluent in English and Arabic.
 
+
+    <hr>    
   Dr. Craig Karpilow
   City: Hamilton
   Phone: 905 526 6250
   Address: Wilson Medical Centre - 130 Wilson Street 
   Gender: M
 
+    <hr>    
   Dr. Kien Trinh
   City: Hamilton
   Phone: 905 648 4425
   Address: Ancaster Sport Med Centre - 455 King St. W 
   Gender: M
-  Notes: Focused practice in Geriatrics Medicine. Call the office to book an appointment. Temporary address until October 2022- relocating to 737 Golf Links Rd. Ancaster, On. L9K 1L5.
-
+  Notes: Focused practice in Geriatrics Medicine. Call the office to book an appointment. 
+         Temporary address until October 2022- relocating to 737 Golf Links Rd. Ancaster, On. L9K 1L5.
+         
+    <hr>    
   Dr. Meriam Basta
   City: Hamilton
   Phone: 905 574 3000
@@ -29,6 +37,7 @@
   Gender: F
   Notes: New patients contact the office to book an appointment 905-574-3000
 
+    <hr>    
   Dr. Mohsin Dhalla
   City: Hamilton
   Phone: 905-578-5776
@@ -36,26 +45,28 @@
   Gender: M
   Notes: Requests may be sent by e-mail: doctor@dhalla.org
 
+    <hr>    
   Dr. Olayinka Dada
   City: Hamilton
   Phone: 905-544-2974
   Address: 150 - 905 Rymal Road East 
   Gender: M
 
+    <hr>    
   Dr. Sam Aderibigbe
   City: Hamilton
   Phone: 905 522 8906
   Address: 304 Victoria Ave. N. #502 
   Gender: M
 
-  <b>Stoney Creek</b>
-
+    <hr>    
   Dr. Farhan Maqbool
   City: Stoney Creek
   Phone: (905)930-9669
   Address: Battlefield Medical Centre - 72 King St. West 
   Gender: M
 
+    <hr>    
   Dr. Steven Zizzo
   City: Stoney Creek
   Phone: (905)575-9004
@@ -66,4 +77,6 @@
          Multidisciplinary team with both male and female providers.
          For more information and to register please visit www.winterberrymedical.ca
 
-</pre>
+  </div>
+</div>
+
