--- a/app/views/static_pages/walkin_clinics_stoney_creek.html.erb
+++ b/app/views/static_pages/walkin_clinics_stoney_creek.html.erb
@@ -1,138 +1,144 @@
-<h3> Other walk-In Clinics in Stoney Creek </h3>
+<div class="card bg-secondary col-md-8 col-md-offset-2 " >
+  <div class="card-body">
+    <h4> Other walk-In Clinics in Stoney Creek </h4>
+
 <pre>
   <b>Urgent Care Clinic</b>
-  2.8 (50) · Urgent care center
+  Rating: 2.8 (50) · Urgent care center
   2757 King St E
-  Closed ⋅ Opens 8 AM · +1 905-522-1155
+  Opens 8 AM · +1 905-522-1155
 
   "Decently fast compared to the emergency rooms."
 
-
+<hr>
   <b>MediCorner</b>
-  3.7 (89) · Surgical center
+  Rating: 3.7 (89) · Surgical center
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 9 AM · +1 905-662-2777
+  Opens 9 AM · +1 905-662-2777
 
   "... and personable staff, clinic is very clean I recommend this clinic"
 
-
+<hr>
   <b>Queenston Walk In Clinic</b>
-  2.6 (217) · Walk-in clinic
+  Rating: 2.6 (217) · Walk-in clinic
   631 Queenston Rd #103
-  Closed ⋅ Opens 9 AM · +1 905-578-9255
+  Opens 9 AM · +1 905-578-9255
 
   "Wait was a little long but well worth it for the service!!"
 
-
+<hr>
   <b>Lakeside Health Centre</b>
-  3.1 (128) · Medical Center
+  Rating: 3.1 (128) · Medical Center
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 9 AM · +1 905-643-1515
+  Opens 9 AM · +1 905-643-1515
 
   "I've only had positive experiences at the walk-in clinic and pharmacy."
 
-
+<hr>
   <b>Supercare Medical</b>
-  3.1 (14) · Medical Center
+  Rating: 3.1 (14) · Medical Center
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 9 AM · +1 905-560-5537
+  Opens 9 AM · +1 905-560-5537
 
   "Honestly the best walk in clinic."
 
-
+<hr>
   <b>Walk-In Clinic at Walmart Stoney Creek by Jack Nathan Health</b>
-  3.4 (153) · Walk-in clinic
+  Rating: 3.4 (153) · Walk-in clinic
   500 Centennial Pkwy N
-  Closed ⋅ Opens 9 AM · +1 905-594-1828
+  Opens 9 AM · +1 905-594-1828
 
   "Definitely the best experience that I've had going to a walk in."
 
-
+<hr>
   <b>Fruitland Crossing Medical Clinic</b>
-  3.1 (17) · Medical clinic
+  Rating: 3.1 (17) · Medical clinic
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 9 AM · +1 289-656-1005
+  Opens 9 AM · +1 289-656-1005
 
-
+<hr>
   <b>Queenston Walk In Clinic</b>
   No reviews · Walk-in clinic
   Closed ⋅ Opens 9 AM · +1 905-578-9255
   Riverdale East Medical
   2.5 (14) · Medical office
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 10 AM · +1 905-664-6762
+  Opens 10 AM · +1 905-664-6762
 
   "Very competent and knowledgeable Doctor."
 
-
+<hr>
   <b>Health-Wise Medical Clinic</b>
-  3.0 (137) · Medical clinic
+  Rating: 3.0 (137) · Medical clinic
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 9 AM · +1 289-656-0299
+  Opens 9 AM · +1 289-656-0299
 
   "It’s a walk in. There are no appointments."
 
-
+<hr>
   <b>St. Joseph’s Healthcare Hamilton King Campus</b>
-  3.1 (208) · Urgent care center
+  Rating: 3.1 (208) · Urgent care center
   2757 King St E
-  Closed ⋅ Opens 8 AM · +1 905-522-1155
+  Opens 8 AM · +1 905-522-1155
 
   "Alot of nice people."
 
-
+<hr>
   <b>Jackson Square Medical Centre & Pharmacy</b>
-  2.3 (3) · Medical clinic
+  Rating: 2.3 (3) · Medical clinic
   2 King St W unit 262
   +1 289-309-2626
 
   "Fantastic new walk in clinic in the jackson square mall!"
-
+<hr>
 
   <b>Walk-In Clinic</b>
-  2.3 (3) · Medical clinic
+  Rating: 2.3 (3) · Medical clinic
   +1 905-545-9999
 
-
+<hr>
   <b>Southmount Health Care Centre</b>
-  2.2 (81) · Medical clinic
+  Rating: 2.2 (81) · Medical clinic
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 1 PM · +1 905-662-3885
+  Opens 1 PM · +1 905-662-3885
 
   "Used walk in on a few occasions."
 
-
+<hr>
   <b>Belle Medical Care</b>
-  4.1 (40) · Walk-in clinic
+  Rating: 4.1 (40) · Walk-in clinic
   148 Parkdale Ave N
-  Closed ⋅ Opens 10 AM · +1 905-544-1676
+  Opens 10 AM · +1 905-544-1676
 
   "Amazing doctors here, super friendly and caring will not go someplace else!"
 
-
+<hr>
   <b>Chafford-100 Medical Center Hamilton ON</b>
-  3.0 (52) · Walk-in clinic
+  Rating: 3.0 (52) · Walk-in clinic
   1104 Fennell Ave E Suite 1&2
-  Closed ⋅ Opens 9 AM · +1 289-674-4800
+  Opens 9 AM · +1 289-674-4800
 
   "The doctor is great and professional!"
 
-
+<hr>
   <b>Paramount Medical Clinic</b>
   No reviews · Medical clinic
   Stoney Creek, ON, Canada
 
-
+<hr>
   <b>Medica One Hamilton</b>
-  2.7 (59) · Doctor
+  Rating: 2.7 (59) · Doctor
   Stoney Creek, ON, Canada
-  Closed ⋅ Opens 12 PM · +1 905-662-3385
+  Opens 12 PM · +1 905-662-3385
 
   "Some of the walk-in clinic receptionists can be so abrasive and ignorant."
 
-
+<hr>
   <b>Momentum Health Walk-In Chiropractic Physiotherapy Reg'd Massage Therapist Clinic</b>
-  5.0 (1) · Walk-in clinic
+  Rating: 5.0 (1) · Walk-in clinic
   500 Centennial Pkwy N
   +1 289-678-2595
 </pre>
+
+  </div>
+</div>
