root url changed to drlena.com

--- a/app/views/user_mailer/invite_doctor.html.erb
+++ b/app/views/user_mailer/invite_doctor.html.erb
@@ -16,7 +16,7 @@ Please follow the link below to complete registration using our secure registrat
 We are looking forward to working with you,
 <p>&nbsp;</p>
 
-<h5><a href="https://walkin.drlena.com">Stoney Creek Medical Walk-In Clinic</a></h5>
+<h5><a href="https://drlena.com">Stoney Creek Medical Walk-In Clinic</a></h5>
 <p><pre>
 140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (289) 204-0561
 During clinic open hours: (905) 561-9255 
