--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -481,7 +481,7 @@ Search box supports searches by Claim number, Accounting Number or Health Card N
 		<a id="patient_label"></a>
 		 <%= link_to "Patient Label", "#", remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#patient_label_modal' %> 
 		 </dt>
-		 <dd class="col-sm-11">Standard 29mm x 62mm label with patient information. This label is used on Referrals, Letters, Lab Requisitions and other documents requiring patient identification. File number on the label denotes unique patient number and allows to go directly to patient profile using URL like this: "https://walkin.drlena.com/patients/48422" where 48422 is file number from the label.
+		 <dd class="col-sm-11">Standard 29mm x 62mm label with patient information. This label is used on Referrals, Letters, Lab Requisitions and other documents requiring patient identification. File number on the label denotes unique patient number and allows to go directly to patient profile using URL like this: "https://drlena.com/patients/48422" where 48422 is file number from the label.
 		 </dd>
 	 </dl>
 
