desktop_home schedule separated

--- a/app/views/schedules/_full_schedule.html.erb
+++ b/app/views/schedules/_full_schedule.html.erb
@@ -12,3 +12,8 @@
     <% end %>
   </tbody>
 </table>
+
+
+<div class='pt-3'>
+    <%= link_to 'Back', root_path, class: "btn btn-primary btn-lg" %>
+</div>
