map on separate page

--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -43,12 +43,15 @@
     </div>
    </div>
   </div>
+
+<div class="pt-2 text-center"><%= link_to 'Show Directions', show_directions_path, class: "btn btn-danger btn-lg" %></div>
 </font>
+
 
 <div class="pt-3"><h5><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></h5> </div>
 <div class="pt-2"><h5><%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %><h5> </div>
 
-<div class='pt-5'>
-<div class='pt-5'>
+
+<div class="pt-3 position-absolute bottom-0 end-0">
 <%= render "footer_icons" %>
 </div>
