--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-Please contact <a href="mailto:eosta@me.com?subject=Walk-In Inquiry&cc=ostadim1@gmail.com">Dr. Elena Ostapenko</a> if you have any questions or concerns about this website.
+Please contact the clinic at 905.561.9255 
 </p>
