--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -4,9 +4,12 @@
 <div class="row">  
   <div class="col-md-5 col-sm-12">
     <img src='/images/clinic22.jpg' width="580" style="margin-left: 20px "></img>
-    <div id="address" class="pt-3 ml-5">140 Centennial Parkway North, Hamilton, ON L8E 1H9  -  <%= link_to 'see directions',
+    <div id="address" class="pt-3 ml-5">140 Centennial Parkway North, Hamilton, ON L8E 1H9  tel. 905.561.9255   &nbsp;&nbsp <%= link_to 'See Directions', show_directions_path %>
+      
+      <!--
       "https://www.google.com/maps/dir//Stoney+Creek+Medical+Walk-In+Clinic,+140+Centennial+Pkwy+N,+Stoney+Creek,+ON+L8E+1H9,+Canada/@43.233076,-79.7631224,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x882c9894d9c1cac5:0xeb749383c5b18494!2m2!1d-79.7609284!2d43.233076!3e0", target: "_blank" %>
-    
+    -->
+
     </div>
 
   <% bg = Schedule.clinic_open? ? 'bg-success' : 'bg-danger' %>
