open AI added to patient page

--- a/app/views/patients/_patient_desktop_visits.html.erb
+++ b/app/views/patients/_patient_desktop_visits.html.erb
@@ -29,6 +29,10 @@
 	<%= will_paginate @visits %>
         </div>
 
+        <%= render "ai_chat" %>
+
+        <div class='pt-5'>
         <%= render "google_biz_link" %>
+        </div>
     <% end %>
   </div>
