--- a/app/views/patients/_patient_mobile_visits.html.erb
+++ b/app/views/patients/_patient_mobile_visits.html.erb
@@ -28,6 +28,8 @@
 	<%= will_paginate @visits %>
         </div>
         
+        <%= render "ai_chat" %>
+
         <%= render "google_biz_link" %>
     <% end %>
   </div>
