--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -86,17 +86,36 @@
   </i>
 </div>
 
-<div class="pt-3"><h5><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></h5> </div>
-<div class="pt-2"><h5><%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %><h5> </div>
-
-<div class="p-5 pull-right">
-<img src="/images/clinic.jpg">
-</div>
-
+<div class="pt-3"><%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></div>
+<div class="pt-2"><%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %></div>
 </div>
 </div>
 
-<div class='p-3'>
+<div class="pt-5"> 
+<div class="row">
+  <div class="col-md-3">
+  <img src="/images/office/400/13.png">
+  </div>
+
+  <div class="col-md-3">
+  <img src="/images/office/400/clinic.jpg">
+  </div>
+
+  <div class="col-md-3">
+  <img src="/images/office/400/1.png">
+  </div>
+
+  <div class="col-md-3">
+  <img src="/images/office/400/6.png">
+  </div>
+</div>
+</div>
+
+  </div>
+</div>
+
+
+<div class='pt-5'>
 <%= render "footer_icons" %>
 </div>
 
